--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -1,6 +1,15 @@
 .title
   font-size: 1.25em
 
+.avatar
+  border-radius: 70px
+  max-width: 10%
+  height: auto
+  vertical-align: middle
+  font-size: 1.25em
+  margin-right: 10px
+
+
 .more
   margin: 2em 0 1em
 
