--- a/assets/css/sidebar.sass
+++ b/assets/css/sidebar.sass
@@ -16,9 +16,10 @@ body > header, body > footer
   display: none
 
 body > article
-  margin: 0 5em
-  padding: 2em 0
-  max-width: 50em
+  width: 75%;
+  max-width: 75em;
+  margin: 0 auto;
+  padding: 2em 0;
 
 aside
   display: block!important
