--- a/assets/css/sidebar.sass
+++ b/assets/css/sidebar.sass
@@ -16,10 +16,10 @@ body > header, body > footer
   display: none
 
 body > article
-  width: 75%;
-  max-width: 75em;
-  margin: 0 auto;
-  padding: 2em 0;
+  width: 75%
+  max-width: 75em
+  margin: 0 auto
+  padding: 2em 0
 
 aside
   display: block!important
